--- a/public_html/index.html
+++ b/public_html/index.html
@@ -33,6 +33,7 @@
   display: none;
 }
 
+/*
 [data-tooltip] {
   position: relative;
 }
@@ -52,6 +53,7 @@
 [data-tooltip]:hover:after {
   visibility: visible;
 }
+*/
 
 .login {
   height: 100%;
@@ -77,35 +79,32 @@
   grid-template-rows: 85% 15%;
 }
 
-.homebutton {
-  position: absolute;
-  z-index: 2;
-  top: 0;
-  right: calc(20% + 32px);
-  width: 32px;
-  height: 32px;
-  font-weight: bold;
-}
-
-.newbutton {
+.navbuttons {
   position: absolute;
   z-index: 2;
   top: 0;
   right: 20%;
-  width: 32px;
-  height: 32px;
-  font-weight: bold;
 }
 
 .newdiv {
   position: absolute;
-  z-index: 2;
-  top: 32px;
-  right: 20%;
+  right: 0;
 }
 
 svg {
   border: 1px solid black;
+}
+
+svg.nob {
+  border: none;
+}
+
+button:hover svg {
+  fill: white;
+}
+
+svg.red {
+  fill: red;
 }
 
 #logs {
@@ -135,14 +134,11 @@ svg {
   flex-basis: auto;
   flex-grow: 0;
   border-bottom: 1px solid black;
+  margin-bottom: 5px;
 }
 
 .activechannel .channelname {
-  border-bottom: 5px solid blue;
-}
-
-.leavebutton {
-  padding: 0;
+  box-shadow: 0 5px blue;
 }
 
 .chatlog {
@@ -234,18 +230,21 @@ div:empty + #lists {
   background: #f0f0f0;
 }
 
-#where li:hover:after {
-  content: "\2795";
-  font-size: smaller;
+.chnadd {
+  visibility: hidden;
+}
+
+li:hover .chnadd {
+  visibility: visible;
 }
 
 textarea {
-  font-family: serif;
   resize: none;
 }
 
 #input {
   padding-top: 10px;
+  padding-bottom: 10px;
   grid-column: 1 / span 2;
   grid-row: 2;
 
@@ -467,7 +466,7 @@ function inputfocus() {
       </b-input-group>
       Your password would take {{crack_time}} to crack.
       <br/>
-      <b-button ref="calculatebutton" onclick="calculate()">Calculate your IDKey</b-button>
+      <b-button variant="outline-primary" ref="calculatebutton" onclick="calculate()">Calculate your IDKey</b-button>
     </b-card>
   </div>
 
@@ -479,7 +478,7 @@ function inputfocus() {
       IDKey:
       <svg width="128" height="128" v-bind:data-jdenticon-value="self_user.idkey"></svg>
       <br/>
-      <b-button ref="connectbutton" onclick="connect()">Connect with this nickname and IDKey</b-button>
+      <b-button variant="outline-primary" ref="connectbutton" onclick="connect()">Connect with this nickname and IDKey</b-button>
       <br/>
       {{sockmsg}}
     </b-card>
@@ -487,17 +486,29 @@ function inputfocus() {
 </div>
 
 <div class="chat" v-show="state==='chat'" v-cloak>
-  <button class="homebutton" v-on:click="join('')">&#x1f3e0;</button>
-  <button class="newbutton" v-on:click="shownewdiv()">&#x2795;</button>
-  <div class="newdiv" v-show="newdiv_state==='show'">
-    <input ref="newname" v-model="newchannelname" placeholder="New channel name" @keyup.enter="newchannel()" @keyup.escape="hidenewdiv()" v-on:blur="hidenewdiv()"></input>
+  <div class="navbuttons">
+    <b-button variant="outline-secondary" onclick="app.join('')">
+      <svg class="nob" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 48 48"><path d="M20 40V28h8v12h10V24h6L24 6 4 24h6v16z"/></svg>
+    </b-button>
+    <b-button variant="outline-secondary" onclick="app.shownewdiv()">
+      <svg class="nob" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 48 48"><path d="M38 26H26v12h-4V26H10v-4h12V10h4v12h12v4z"/></svg>
+    </b-button>
+    <div class="newdiv" v-show="newdiv_state==='show'">
+      <b-input style="width: auto;" ref="newname" v-model="newchannelname" placeholder="New channel name" @keyup.enter.native="newchannel()" @keyup.escape.native="hidenewdiv()" v-on:blur.native="hidenewdiv()"></input>
+    </div>
   </div>
+
   <div id="logs">
     <div class="channel" v-for="(chatlog,ix) in chatlogs" v-on:click="changechannel(ix)" v-bind:class="{activechannel: focuschannel===mychannelnames[ix]}">
       <div class="channelname">
-        <button class="leavebutton" v-on:click="leave(mychannelnames[ix], $event)">&#x274c;</button>
-        <span v-if="mychannelnames[ix]===''" data-tooltip="CC 3.0 BY - Icon by Freepik https://www.flaticon.com/authors/freepik">
-          <object data="home.svg" width=32 height=32></object>
+        <b-button variant="outline-danger" v-on:click="leave(mychannelnames[ix], $event)">
+          <svg class="nob red" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 48 48"><path d="M38 12.83L35.17 10 24 21.17 12.83 10 10 12.83 21.17 24 10 35.17 12.83 38 24 26.83 35.17 38 38 35.17 26.83 24z"/></svg>
+        </b-button>
+        <span v-if="mychannelnames[ix]===''">
+          <!--
+          <svg class="nob" xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 48 48"><path d="M20 40V28h8v12h10V24h6L24 6 4 24h6v16z"/></svg>
+          -->
+          <img width="36" height="36" src="Small_SVG_house_icon.svg"/>
         </span>
         <strong>{{mychannelnames[ix]}}</strong>
       </div>
@@ -531,15 +542,21 @@ function inputfocus() {
       <ul>
         <li v-for="item in sorted_channels" @click="join(item)">
           <strong>{{item}}</strong>
-          <strong v-if="item===''">&#x1f3e0;</strong>
+          <span v-if="item===''">
+            <!--
+            <svg class="nob" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 48 48"><path d="M20 40V28h8v12h10V24h6L24 6 4 24h6v16z"/></svg>
+            -->
+            <img width="18" height="18" src="Small_SVG_house_icon.svg"/>
+          </span>
+          <svg class="nob chnadd" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 48 48"><path d="M38 26H26v12h-4V26H10v-4h12V10h4v12h12v4z"/></svg>
         </li>
       </ul>
     </div>
   </div>
-  <div id="input">
+  <div id="input" class="container-fluid">
     <svg width="64" height="64" v-bind:data-jdenticon-value="self_user.idkey"></svg>
     <strong>{{self_user.nickname}}:</strong>
-    <textarea id="input_text" ref="input_text" v-model.trim="input" @keydown.enter="send_say"></textarea>
+    <b-form-textarea id="input_text" ref="input_text" v-model.trim="input" @keydown.enter.native="send_say"></textarea>
   </div>
   <div class="sockmsg">
     {{sockmsg}}
