--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,4 +1,18 @@
 <html>
+<!--
+TODO:
+channel member list nowrap
+auto-link urls
+auto-reconnect attempt
+hide password button
+tooltips on home and add buttons
+hints for vue for channel join/leave
+track channels and membership more closely
+right-side padding for timestamp
+timestamp sync
+control-enter for newline in chat
+trim text, don't send pure whitespace
+-->
 <head>
   <link type="text/css" rel="stylesheet" href="bootstrap.min.css"/>
   <link type="text/css" rel="stylesheet" href="bootstrap-vue.css"/>
@@ -33,28 +47,6 @@
   display: none;
 }
 
-/*
-[data-tooltip] {
-  position: relative;
-}
-
-[data-tooltip]:after {
-  visibility: hidden;
-  z-index: 1;
-  position: absolute;
-  content: attr(data-tooltip);
-  width: auto;
-  max-width: min-content;
-  height: auto;
-  background-color: white;
-  border: 1px solid black;
-}
-
-[data-tooltip]:hover:after {
-  visibility: visible;
-}
-*/
-
 .login {
   height: 100%;
   display: grid;
@@ -84,6 +76,8 @@
   z-index: 2;
   top: 0;
   right: 20%;
+  background: white;
+  border-radius: .25rem;
 }
 
 .newdiv {
@@ -103,10 +97,6 @@ button:hover svg {
   fill: white;
 }
 
-svg.red {
-  fill: red;
-}
-
 #logs {
   grid-column: 1;
   grid-row: 1;
@@ -115,19 +105,34 @@ svg.red {
   flex-direction: row;
 }
 
-.channel.activechannel {
-  opacity: 1;
+.closebtn svg {
+  fill: red;
+  border-radius: 7px;
+}
+
+.closebtn:hover svg {
+  fill: white;
+  background: red;
 }
 
 .channel {
   opacity: 0.5;
 
+  width: 0;
   flex-basis: 0;
   flex-grow: 1;
-  border-right: 1px solid black;
+  border-left: 1px solid black;
 
   display: flex;
   flex-direction: column;
+}
+
+.channel:first-child {
+  border-left: none;
+}
+
+.channel.activechannel {
+  opacity: 1;
 }
 
 .channelname {
@@ -135,6 +140,9 @@ svg.red {
   flex-grow: 0;
   border-bottom: 1px solid black;
   margin-bottom: 5px;
+  white-space: nowrap;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
 }
 
 .activechannel .channelname {
@@ -156,7 +164,8 @@ svg.red {
 
 .msg {
   background: #f7f7f7;
-  margin-right: 10px;
+  margin: 5px;
+  border: 1px solid lightgrey;
 }
 
 .msg svg {
@@ -177,23 +186,20 @@ svg.red {
   font-size: small;
   color: grey;
   float: right;
-  border-left: 1px solid grey;
-  border-bottom: 1px solid grey;
+  border-left: 1px solid lightgrey;
+  border-bottom: 1px solid lightgrey;
   padding-left: 3px;
 }
 
 #lists {
   grid-column: 2;
-  grid-row: 1;
+  grid-row: 1 / span 2;
 
   padding-left: 10px;
+  border-left: 1px solid black;
 
   display: flex;
   flex-direction: column;
-}
-
-div:empty + #lists {
-  border-left: 1px solid black;
 }
 
 #who {
@@ -209,6 +215,10 @@ div:empty + #lists {
   margin: 0;
 }
 
+#who li {
+  margin-bottom: 5px;
+}
+
 #where {
   overflow-y: scroll;
 
@@ -217,13 +227,14 @@ div:empty + #lists {
 }
 
 #where ul {
-  padding-left: 20px;
   margin: 0;
   margin-right: 10px;
+  overflow-x: hidden;
 }
 
 #where li {
   cursor: pointer;
+  white-space: nowrap;
 }
 
 #where li:hover {
@@ -245,7 +256,7 @@ textarea {
 #input {
   padding-top: 10px;
   padding-bottom: 10px;
-  grid-column: 1 / span 2;
+  grid-column: 1;
   grid-row: 2;
 
   border-top: 1px solid black;
@@ -501,16 +512,13 @@ function inputfocus() {
   <div id="logs">
     <div class="channel" v-for="(chatlog,ix) in chatlogs" v-on:click="changechannel(ix)" v-bind:class="{activechannel: focuschannel===mychannelnames[ix]}">
       <div class="channelname">
-        <b-button variant="outline-danger" v-on:click="leave(mychannelnames[ix], $event)">
-          <svg class="nob red" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 48 48"><path d="M38 12.83L35.17 10 24 21.17 12.83 10 10 12.83 21.17 24 10 35.17 12.83 38 24 26.83 35.17 38 38 35.17 26.83 24z"/></svg>
-        </b-button>
+        <span class="closebtn" v-on:click="leave(mychannelnames[ix], $event)">
+          <svg class="nob" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 48 48"><path d="M38 12.83L35.17 10 24 21.17 12.83 10 10 12.83 21.17 24 10 35.17 12.83 38 24 26.83 35.17 38 38 35.17 26.83 24z"/></svg>
+        </span>
         <span v-if="mychannelnames[ix]===''">
-          <!--
-          <svg class="nob" xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 48 48"><path d="M20 40V28h8v12h10V24h6L24 6 4 24h6v16z"/></svg>
-          -->
           <img width="36" height="36" src="Small_SVG_house_icon.svg"/>
         </span>
-        <strong>{{mychannelnames[ix]}}</strong>
+        <strong style="line-height: 36px;">{{mychannelnames[ix]}}</strong>
       </div>
       <div class="chatlog">
         <div class="msg" v-for="item in chatlog">
@@ -526,9 +534,10 @@ function inputfocus() {
       </div>
     </div>
   </div>
+
   <div id="lists">
+    <strong>Channel Members:</strong>
     <div id="who">
-      <strong>Channel Members:</strong>
       <ul>
         <li v-for="idkey in sorted_channel_users">
           <svg width="32" height="32" v-bind:data-jdenticon-value="idkey"></svg>
@@ -536,11 +545,13 @@ function inputfocus() {
         </li>
       </ul>
     </div>
+
     <hr style="width: 100%;" />
+
+    <strong>Active Channels:</strong>
     <div id="where">
-      <strong>Active Channels:</strong>
-      <ul>
-        <li v-for="item in sorted_channels" @click="join(item)">
+      <ul class="list-group">
+        <li class="list-group-item" v-for="item in sorted_channels" @click="join(item)">
           <strong>{{item}}</strong>
           <span v-if="item===''">
             <!--
@@ -556,7 +567,7 @@ function inputfocus() {
   <div id="input" class="container-fluid">
     <svg width="64" height="64" v-bind:data-jdenticon-value="self_user.idkey"></svg>
     <strong>{{self_user.nickname}}:</strong>
-    <b-form-textarea id="input_text" ref="input_text" v-model.trim="input" @keydown.enter.native="send_say"></textarea>
+    <b-form-textarea id="input_text" ref="input_text" v-model="input" @keydown.enter.native="send_say"></textarea>
   </div>
   <div class="sockmsg">
     {{sockmsg}}
