--- a/public_html/index.html
+++ b/public_html/index.html
@@ -189,6 +189,7 @@ button:hover svg {
   border-left: 1px solid lightgrey;
   border-bottom: 1px solid lightgrey;
   padding-left: 3px;
+  padding-right: 3px;
 }
 
 #lists {
