--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,7 +1,6 @@
 <html>
 <!--
 TODO:
-channel member list nowrap
 auto-link urls
 auto-reconnect attempt
 hide password button
@@ -218,6 +217,9 @@ button:hover svg {
 
 #who li {
   margin-bottom: 5px;
+  white-space: nowrap;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
 }
 
 #where {
